--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -15,9 +15,9 @@ spring:
     port: 6379
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/${db}?characterEncoding=UTF-8&useSSL=false
-    username: root
-    password: root
+    url: jdbc:mysql://47.52.227.26:3306/${db}?characterEncoding=UTF-8&useSSL=false
+    username: hjs
+    password: hjs
 logging:
   path: ./logs
   level:
